docs(Navigation): Add overflow property to prevent nav from being hidden in Mobile Safari.

--- a/templates/scss/_layout.scss
+++ b/templates/scss/_layout.scss
@@ -117,6 +117,7 @@ body {
   @extend %horizontal-scrollable;
 
   display: flex;
+  overflow: visible;
   min-height: $header-height;
   color: color(white);
   align-items: center;
